--- a/src/App.css
+++ b/src/App.css
@@ -7,20 +7,26 @@
   pointer-events: none;
 }
 
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
+.nav_header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+  color: white;
+  
+}
+.nav {
+  padding-left: 8px;
+  text-decoration: none;
   color: white;
 }
 
