--- a/src/App.css
+++ b/src/App.css
@@ -2,36 +2,19 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .nav_header {
-  background-color: #282c34;
+  background-color: #45526a;
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  flex-flow: row wrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 2vh;
   color: white;
   
 }
 .nav {
-  padding-left: 8px;
+  padding:15px;
   text-decoration: none;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
